@@ -1,3 +1,12 @@
+2011-02-04  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/evil_stdio.c:
+	* src/lib/evil_stdio.h:
+	Add asprintf() function.
+	Add documentation for vasprintf().
+	Use _vcprintf() instead of vsnprintf() to get the length
+	of the string, as recommended by MSDN.
+
 2011-01-06  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/evil_stdio.c:
